@@ -33,6 +33,10 @@ hr_flexsurvreg <- function(x, newdata=NULL, t=NULL, start=0, ci=TRUE, B=1000, cl
   fn <- expand.summfn.args(summary.fns(x, type="hazard"))
   est1 <- do.call(fn, args1)
   est0 <- do.call(fn, args0)
+  
+  tstart <- summfn_to_tstart(x, type="hr", t, quantiles, start)
+  t <- tstart$t; start <- tstart$start
+  
   res <- data.frame(t = t) 
   res$est <- est1 / est0
   if (ci){
